--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta property="og:image:height" content="">
     <meta property="og:image" content="">
     <meta property="og:url" content="index.html">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <title>AQI監控 - Vue元件練習</title>
     <link rel="shortcut icon" href="images/icon.png" type="image/x-icon">
     <meta charset="UTF-8">
